[package]
name = "combpop"
description = "Type-based parser combinator"
# documentation = ""
homepage = "https://github.com/qnighy/combpop/"
repository = "https://github.com/qnighy/combpop/"
readme = "README.md"
keywords = ["parser", "parsing", "combinators", "ll"]
categories = ["parsing"]
license = "Apache-2.0/MIT"
version = "0.0.4"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]

[dependencies]
either = "1.4.0"
